fix contrast and add no booking message

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,10 @@ main {
     color: white;
 }
 
+.nav-link:hover {
+    color: #ccd0fff5;
+}
+
 .navbar, footer {
     background-color: rgba(141, 110, 151, 0.719);
 }
@@ -279,7 +283,7 @@ footer {
 .signup-link {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 900;
-    color: rgba(141, 110, 151, 0.719);
+    color: rgba(240 192 255 / 72%);
 }
 
 .booking-text {
